sidebar works now

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,9 +1,11 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "semantic-ui";
+
 #navbar {
-  border-style: solid;
-  border-width: 1px;
-  border-color: black;
-  padding: 1em; 
+  // border-style: solid;
+  // border-width: 1px;
+  // border-color: black;
+  // padding: 1em; 
 }
