--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,23 +1,36 @@
-<div class="ui red vertical demo sidebar menu">
-  <a class="item">
-    <i class="home icon"></i>
-    Home
-  </a>
-  <a class="active item">
-    <i class="heart icon"></i>
-    Current Section
-  </a>
-  <a class="item">
-    <i class="facebook icon"></i>
-    Like us on Facebook
-  </a>
-  <div class="item">
-    <b>More</b>
-    <div class="menu">
-      <a class="item">About</a>
-      <a class="item">Contact Us</a>
+
+  
+    <div class="ui red vertical demo sidebar menu">
+      <a class="item">
+        <%= semantic_icon('home') %>
+        Welcome
+      </a>
+      <a class="active item">
+        <i class="heart icon"></i>
+        Stores
+      </a>
+      <a class="item">
+        <i class="facebook icon"></i>
+        Social
+      </a>
     </div>
   </div>
-</div>
 
-<div class='ui button' id="sidebar">sidebar</div>
+  <div class='ui button' id="sidebar">sidebar</div>
+  <p>
+    welcome
+    stores 
+    dining
+    food promos
+    whats new
+    map
+    hours
+    gift card
+    social
+    employment
+    movies
+    notices
+    directions
+    contest
+    settings
+  </p>
