navbar icons in place, now build each view

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -11,10 +11,15 @@
 }
 
 body > div.ui.red.vertical.demo.sidebar.menu {
-  width: 125px !important;
-  margin-left: -125px !important;
+  width: 150px !important;
+  margin-left: -150px !important;
 }
 
 body > div.ui.red.vertical.demo.sidebar.menu.active {
   margin-left:  0px !important;
+}
+
+.two_words {
+  display: inline-block;
+  font-size: 90%;
 }
