--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,12 +3,11 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "semantic-ui";
 
-#navbar {
-  // border-style: solid;
-  // border-width: 1px;
-  // border-color: black;
-  // padding: 1em; 
+body, html {
+  height: 100%;
 }
+
+  // sidebar 
 
 body > div.ui.red.vertical.demo.sidebar.menu {
   width: 150px !important;
@@ -22,4 +21,20 @@ body > div.ui.red.vertical.demo.sidebar.menu.active {
 .two_words {
   display: inline-block;
   font-size: 90%;
+}
+
+  // welcome page
+
+#index {
+  width:100%;
+  height: 100%;
+  background-image: url("shopping.jpg");
+}
+
+  // stores page
+
+#stores_header {
+  float: right;
+  padding-top: 0.5em;
+  margin-right: 80%;
 }
