show path working tada

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
   <%= semantic_icon('cart') %>
   Stores
   <% end %>
-  <%= link_to root_url, class: 'item' do %>
+  <%= link_to stores_dining_path, class: 'item' do %>
   <%= semantic_icon('food') %>
   Dining
   <% end %>
