--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,6 +1,10 @@
 <h1>Stores#index</h1>
 <p>Find me in app/views/stores/index.html.erb</p>
-<%= form_tag stores_show_path, :method => 'get' do %>
+<%= form_tag stores_index_path, :method => 'get' do %>
   <%= text_field_tag :search, params[:search] %>
   <%= submit_tag "Search", :name => nil %>
+<% end %>
+
+<% @stores.each do |store| %>
+  <%= render 'store.html.erb' %><br>
 <% end %>
