promotions is working

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -11,7 +11,7 @@
   <%= semantic_icon('food') %>
   Dining
   <% end %>
-  <%= link_to root_url, class: 'item' do %>
+  <%= link_to promotions_all_path, class: 'item' do %>
   <%= semantic_icon('star') %>
   Promos
   <% end %>
