--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,10 +1,11 @@
 <h1>Stores#index</h1>
 <p>Find me in app/views/stores/index.html.erb</p>
-<%= form_tag stores_index_path, :method => 'get' do %>
-  <%= text_field_tag :search, params[:search] %>
-  <%= submit_tag "Search", :name => nil %>
-<% end %>
+
 
 <% @stores.each do |store| %>
-  <%= render 'store.html.erb' %><br>
+<div class='ui segment'>
+  <%= store.name %><br>
+  Level: <%= store.level %><br>
+  <%= store.classification %><br>
+</div>
 <% end %>
