--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
   <%= semantic_icon('home') %>
   Welcome
   <% end %>
-  <%= link_to stores_index_path, class: 'item' do %>
+  <%= link_to stores_path, class: 'item' do %>
   <%= semantic_icon('cart') %>
   Stores
   <% end %>
