--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -7,34 +7,42 @@ body, html {
   height: 100%;
 }
 
+  // page specific header
+
+  .page_specific_header {
+    text-align: center;
+    padding: 0.2em;
+    font-size: 150%;
+  }
+
+
+
   // sidebar 
 
-body > div.ui.red.vertical.demo.sidebar.menu {
-  width: 150px !important;
-  margin-left: -150px !important;
-}
+  body > div.ui.red.vertical.demo.sidebar.menu {
+    width: 150px !important;
+    margin-left: -150px !important;
+  }
 
-body > div.ui.red.vertical.demo.sidebar.menu.active {
-  margin-left:  0px !important;
-}
+  body > div.ui.red.vertical.demo.sidebar.menu.active {
+    margin-left:  0px !important;
+  }
 
-.two_words {
-  display: inline-block;
-  font-size: 90%;
-}
+  #sidebar {
+    position: fixed;
+    z-index: 50;
+  }
 
-  // welcome page
-
-#index {
-  width:100%;
-  height: 100%;
-  background-image: url("shopping.jpg");
-}
+  .two_words {
+    display: inline-block;
+    font-size: 90%;
+  }
 
   // stores page
 
-#stores_header {
-  float: right;
-  padding-top: 0.5em;
-  margin-right: 80%;
-}
+  #stores_header {
+    float: right;
+    padding-top: 0.5em;
+    margin-right: 80%;
+  }
+
