--- a/app/views/promotions/all.html.erb
+++ b/app/views/promotions/all.html.erb
@@ -1,5 +1,4 @@
-<h1>Promotions!</h1>
-
+<h1 class="page_specific_header">Promotions!</h1>
 
 <% @promotions.each do |promotion| %>
 <%= link_to store_promotion_path(promotion.store_id, promotion) do %>
