--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Stores#index</h1>
-<p>Find me in app/views/stores/index.html.erb</p>
-
+<div class='page_specific_header'>
+  <h1>Stores#index</h1>
+</div>
 
 <% @stores.each do |store| %>
 <div class='ui segment'>
