--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -1,4 +1,5 @@
-<h1>Stores#show</h1>
-<p>Find me in app/views/stores/show.html.erb</p>
+<h1 class="page_specific_header">Stores#show</h1>
 
-
+<div class='ui segment'>
+test
+</div>  
