--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
   <%= semantic_icon('star') %>
   Promos
   <% end %>
-  <%= link_to root_url, class: 'item' do %>
+  <%= link_to whatsnew_path, class: 'item' do %>
   <%= semantic_icon('exclamation') %>
   <p class='two_words'>What's new</p>
   <% end %>
