--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,45 +19,13 @@
   <%= semantic_icon('exclamation') %>
   <p class='two_words'>What's new</p>
   <% end %>
-  <%= link_to root_url, class: 'item' do %>
+  <%= link_to map_path, class: 'item' do %>
   <%= semantic_icon('map') %>
   Map
   <% end %>
-  <%= link_to root_url, class: 'item' do %>
+  <%= link_to hours_path, class: 'item' do %>
   <%= semantic_icon('time') %>
   Hours
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('gift') %>
-  Gift Card
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('facebook') %>
-  Social
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('text file outline') %>
-  <p class='two_words'>Employment</p>
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('photo') %>
-  Movies
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('bolt') %>
-  Notices
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('location') %>
-  Directions
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('trophy') %>
-  Contests
-  <% end %>
-  <%= link_to root_url, class: 'item' do %>
-  <%= semantic_icon('setting') %>
-  Settings
   <% end %>
 </div>
 
