--- a/app/views/promotions/all.html.erb
+++ b/app/views/promotions/all.html.erb
@@ -2,7 +2,7 @@
 
 <% @promotions.each do |promotion| %>
 <%= link_to store_promotion_path(promotion.store_id, promotion) do %>
-<div class='ui segment'>
+<div class='ui segment store'>
   <%= promotion.name %> @ <%= promotion.store.name %><br>
   <%= promotion.start_date %> - <%= promotion.end_date %><br>
   <%= promotion.description %>
