--- a/app/assets/stylesheets/characters.css.scss
+++ b/app/assets/stylesheets/characters.css.scss
@@ -1,3 +1,34 @@
 // Place all the styles related to the characters controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.bowser_post {
+  left: 4%;
+  margin-right: 4%;
+  width: 90%;
+}
+
+.post_body {
+  padding: 0.2em;
+  font-size:1.4em;
+  //text-align: center;
+  font-size: 1em;
+}
+
+.post_header {
+  font-size: 1.5em;
+  color: #1C9FE7;
+  //text-align: center;
+}
+
+.bowser {
+  float: left;
+  padding-right: 0.5em;
+}
+
+.post_timestamp {
+  margin-top: 1.8em;
+  font-size: 0.8em;
+  float: right;
+  color: #15C0DF;
+}
